# BWAPI4J

./: .gitignore  .gitmodules  .project  .travis.yml  CONTRIBUTING.md  CREDITS.md  README.md  appveyor.yml  build.gradle  gradle.properties.sample  settings.gradle
BWAPI4J/: .checkstyle  .gitignore  .project  README.md  build.gradle  checkstyle.xml  gradle.properties  gradle.properties.sample
BWAPI4J-AP/: README.md
BWAPI4J-AP/src/main/resources/: c++_templates.stg  java_templates.stg
BWAPI4J/bwapi-data/: .gitignore
BWAPI4J/gradle/wrapper/: gradle-wrapper.properties
BWAPI4J/src/main/java/bwapi/: BW.java  BWAPI4J.java  BWEventListener.java  BWMap.java  BWMapImpl.java  Bullet.java  BulletType.java  BwError.java  Color.java  DamageEvaluator.java  DamageType.java  DefaultUnitFactory.java  Error.java  EventType.java  ExplosionType.java  Flag.java  Force.java  GameType.java  IdMapperHelper.java  InteractionHandler.java  Key.java  MapDrawer.java  MouseButton.java  Order.java  Player.java  PlayerType.java  Position.java  Race.java  Region.java  TechType.java  TilePosition.java  Unit.java  UnitCommand.java  UnitCommandSimulation.java  UnitCommandType.java  UnitFactory.java  UnitSizeType.java  UnitStatCalculator.java  UnitType.java  UpgradeType.java  (+3 more)
BWAPI4J/src/main/java/bwem/: Altitude.java  Area.java  BWEM.java  Base.java  BaseImpl.java  Bits.java  BwemDetail.java  BwemUtils.java  CPPath.java  Check.java  CheckMode.java  ChokePoint.java  ChokePointImpl.java  Chokepoint.java  GenericTile.java  Geyser.java  Graph.java  IBlocking.java  IWrappedInteger.java  Index.java  LICENSE.txt  Map.java  MapDrawer.java  MapPrinter.java  Markable.java  Mineral.java  MiniTile.java  Neutral.java  PairGenericAltitudeComparator.java  PairGenericMiniTileAltitudeComparator.java  PathLength.java  Pred.java  README.md  Resource.java  StaticBuilding.java  StaticMarkable.java  Tile.java  Timer.java  UserData.java  check_t.java
BWAPI4J/src/main/java/bwta/: BWTA.java  BaseLocation.java  CenteredObject.java  ChokePoint.java  Chokepoint.java  Polygon.java  Position.java  PositionedObject.java  Region.java  TilePosition.java  Tmp_Position.java  Tmp_TilePosition.java
BWAPI4J/src/main/java/yata/: MapPrinter.java  YATA.java
BWAPI4J/src/main/resources/: log4j2.xml
BWAPI4J/src/native/include/: bwem_map_MapInitializerImpl.h  bwta_BWTA.h  bwta_BaseLocation.h  bwta_Polygon.h  net_lingala_zip4j_core_ZipFile.h  org_openbw_bwapi4j_BW.h  org_openbw_bwapi4j_BWMap.h  org_openbw_bwapi4j_BWMapImpl.h  org_openbw_bwapi4j_BW_BridgeType.h  org_openbw_bwapi4j_BW_Property.h  org_openbw_bwapi4j_DamageEvaluator.h  org_openbw_bwapi4j_InteractionHandler.h  org_openbw_bwapi4j_InteractionHandler_CacheIndex.h  org_openbw_bwapi4j_InteractionHandler_TextSize.h  org_openbw_bwapi4j_MapDrawer.h  org_openbw_bwapi4j_MapDrawer_TextSize.h  org_openbw_bwapi4j_unit_Unit.h  org_openbw_bwapi4j_unit_Unit_TrainingSlot.h
BWAPI4J/src/test/java/: ReadIt.java
BWAPI4J/src/test/resources/: BWMapMock_groundInfo.txt  README.md  log4j2-test.xml
BWAPI4JBridge/: .gitignore  BWAPI4JBridge.sln  CMakeLists.txt  VsDevCmd.bat  ap_inc.cmake  appveyor_prebuild.ps  bridge_type_openbw_windows.bat  bridge_type_vanilla_windows.bat  build_bridge_openbw_linux.sh  build_bridge_openbw_windows.bat  build_bridge_vanilla_windows.bat  build_bwapi_openbw_linux.sh  build_bwapi_openbw_windows.bat  build_bwapi_vanilla_windows.bat  build_bwem_openbw_linux.sh  build_bwem_openbw_windows.bat  build_bwem_vanilla_windows.bat  bwapi.cmake  bwapi4j.cmake  bwapi4jbridge.cmake  bwapi_inc.cmake  bwapi_lib.cmake  compilerflags.cmake  externals.cmake  flags.cmake  func.cmake  jni.cmake  jni_inc.cmake  spdlog.cmake  spdlog_inc.cmake
BWAPI4JBridge/BWAPI4JBridge/: .clang-format  BWAPI4JBridge.cpp  BWAPI4JBridge.vcxproj  BWAPI4JBridge.vcxproj.filters  BWTA.h  CMakeLists.txt  Dll.cpp  OpenBWAPI4JBridge_Linux.sh  OpenBWAPI4JBridge_Windows.bat  ReadMe.txt  bridge_type_openbw_linux.sh  bridge_type_openbw_windows.bat  bridge_type_vanilla_windows.bat  dllmain.cpp  formatting.sh  stdafx.cpp  targetver.h
BWAPI4JBridge/BWAPI4JBridge/BWAPI/: Position.h  SetContainer.h  WindowsTypes.h
BWAPI4JBridge/BWAPI4JBridge/BWTA/: BaseLocation.h  Polygon.h  RectangleArray.h  Region.h
BWAPI4JBridge/BWAPI4JBridge/Debug/: .gitignore  vc141.idb
BWAPI4JBridge/BWAPI4JBridge/VisualStudio/: BWAPI4JBridge.sln  BWAPI4JBridge.vcxproj  BWAPI4JBridge.vcxproj.filters
BWAPI4JBridge/BWAPI4JBridge/src/: BWTA.cpp  Bridge.cpp  Bridge.h  BridgeEnum.cpp  BridgeEnum.h  BridgeMap.cpp  BridgeMap.h  DamageEvaluator.cpp  InteractionHandler.cpp  MapDrawer.cpp  OpenBridgeModule.cpp  OpenBridgeModule.h  So.h  Unit.cpp
BWAPI4JBridge/BWTA/include/: BWTA.h
BWAPI4JBridge/BWTA/include/BWTA/: BaseLocation.h  Polygon.h  RectangleArray.h  Region.h
BWAPI4JBridge/Debug/: BWAPI4JBridge.ilk
BWAPI4JBridge/Release/: BWAPI4JBridge.lib
BWAPI4JBridge/VisualStudio/: BWAPI4JBridge.sln  BWAPI4JBridge.vcxproj  BWAPI4JBridge.vcxproj.filters
BWAPI4JBridge/VisualStudio/Release/: .gitignore
BWAPI4JBridge/src/: BWAPILauncher.cpp  BWAPILauncher.h  Bridge.cpp  Bridge.h  BridgeData.cpp  BridgeData.h  BridgeEnum.cpp  BridgeEnum.h  BridgeMap.cpp  BridgeMap.h  Bullet.cpp  Callbacks.cpp  Callbacks.h  DamageEvaluator.cpp  DataBuffer.cpp  DataBuffer.h  Force.cpp  Globals.cpp  Globals.h  InteractionHandler.cpp  JavaRefs.cpp  JavaRefs.h  JniBwem.cpp  JniBwem.h  Logger.cpp  Logger.h  MapDrawer.cpp  OpenBridgeModule.cpp  OpenBridgeModule.h  Player.cpp  So.cpp  Unit.cpp  UnitCommandSimulation.cpp
OpenBWAPI4JBridge/: .cproject  .gitignore  .project  BWTA.cpp  BWTA.h  BridgeEnum.cpp  BridgeMap.cpp  BridgeMap.h  DamageEvaluator.cpp  DummyBotModule.cpp  DummyBotModule.h  InteractionHandler.cpp  MapDrawer.cpp  OpenBridgeModule.cpp  OpenBridgeModule.h  So.cpp  So.h  Unit.cpp
OpenBWAPI4JBridge/BWTA/: Chokepoint.h  RectangleArray.h
OpenBWAPI4JBridge/Debug/: DummyBotModule.d
OpenBWAPI4JBridge/Release/: makefile  objects.mk  subdir.mk
githooks/: pre-commit.sh
scripts/: build.bat  clean.bat  package.bat
webhooks/: appveyor_discord.ps1
(+400 files in other folders)
